Farbe geändert - #666699 zu #8C072f;

--- a/premium/src/css/styles.css
+++ b/premium/src/css/styles.css
@@ -870,7 +870,7 @@ section {
 
 .separator {
   display: inline-block;
-  border-bottom: 3px solid #666699;
+  border-bottom: 3px solid #8C072f;
   margin: 20px 0 30px 0;
   width: 60px;
 }
@@ -4463,7 +4463,7 @@ textarea.form-control {
 }
 
 .btn-primary {
-  background-color: #666699;
+  background-color: #8C072f;
   color: #ffffff;
 }
 
