--- a/premium/src/css/font-awesome.css
+++ b/premium/src/css/font-awesome.css
@@ -19,6 +19,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transform: translate(0, 0);
+  color: #8C072f;
 }
 /* makes the font 33% larger relative to the icon container */
 .fa-lg {
